--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 web:
   build: ./build/
   links:
-    - db
+    - database
   ports:
     - "8000:80"
   volumes:
     - .:/var/www/html/
-db:
+  environment:
+    DB_HOST: database
+database:
   image: mysql:5.5
-  ports:
-    - "13306:3306"
   environment:
     MYSQL_RANDOM_ROOT_PASSWORD: true
     MYSQL_USER: isp
