--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+DB_DRIVER="mysql"   # possible values are 'mysql', 'postgres' or 'sqlite'
 DB_HOST="localhost"
 DB_USER="isp"
 DB_PASS="isp"
-DB_NAME="isp"
+DB_NAME="isp"       # in case of 'sqlite'-driver the file path of the database
+DB_TRANSIENT=0      # possible values: 1 = enabled, 0 = disabled; 'sqlite'-driver only, stores everything in memory
